# Anonymizer

./: .gitignore  Anonymizer.bat  CONTEXT.md  Install.bat  README.md  pyproject.toml
anonymizer/: actions.py  audit.py  config.py  core.py  engine.py  evaluation.py  gliner_recognizer.py  language.py  mapping.py  models.py  ocr.py  pipeline.py  profiles.py  report.py  taxonomy.py  validators.py  xmlsafe.py
anonymizer/data/: default_recognizers.yaml
anonymizer/formats/: docx_handler.py  legacy.py  pdf_handler.py  pptx_handler.py  run_replace.py  xlsx_handler.py
anonymizer/gui/: app.py  review.py  settings_page.py  theme.py
docs/: GLINER_VERIFICATION_CHECKLIST.md  research_offline-detection-models_2026-07-24.md  run_anonymizer-v1_2026-07-10.md  run_anonymizer-v2_2026-07-15.md  run_audit-fixes_2026-07-17.md  run_deployability_2026-07-15.md  run_detection-precision_2026-07-23.md  run_dragdrop-uiupload_2026-07-17.md  run_gliner-integration_2026-07-24.md  run_review-at-scale_2026-07-22.md  run_topical-sensitivity_2026-07-23.md
scripts/: build_offline_bundle.ps1  measure_recall.py  patch_nicegui_drop.py  run.ps1  setup.ps1
scripts/bundle_templates/: FAQ.md  install.ps1  launch.bat
tests/: conftest.py  test_config.py  test_core.py  test_docx.py  test_drop.py  test_export.py  test_fail_loud.py  test_gliner.py  test_gui_render.py  test_hardening.py  test_language.py  test_mapping.py  test_ocr.py  test_pdf.py  test_pptx.py  test_precision.py  test_preview.py  test_profiles.py  test_recall.py  test_reidentify.py  test_tier_split.py  test_topical.py  test_upload.py  test_validators.py  test_xlsx.py
