[project]
name = "anonymizer"
version = "0.2.0"
description = "Local document anonymizer/pseudonymizer built on Presidio"
requires-python = ">=3.11,<3.13"
dependencies = [
  "nicegui>=1.4",
  "presidio-analyzer>=2.2",
  "spacy>=3.8,<3.9",
  # The two spaCy models as direct dependencies, so `uv sync` installs them and
  # never prunes them (a plain `spacy download` needs pip, which the uv venv
  # lacks). Pinned to 3.8.x to match spacy above.
  "de_core_news_lg @ https://github.com/explosion/spacy-models/releases/download/de_core_news_lg-3.8.0/de_core_news_lg-3.8.0-py3-none-any.whl",
  "en_core_web_md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl",
  "python-docx>=1.1",
  "openpyxl>=3.1",
  "python-pptx>=0.6.23",
  "pymupdf>=1.24",
  "pytesseract>=0.3.10",
  "pillow>=10.0",
  "pyyaml>=6.0",
  "cryptography>=42.0",
  "keyring>=25.0",
  "lxml>=5.0",
  "pywin32>=306; platform_system == 'Windows'",
  "pywebview>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# Optional ML detection (the GLiNER second-pass recognizer). Kept OUT of the base
# install so the tool runs with ZERO ML dependencies (gliner_recognizer imports
# these lazily). The offline bundle installs this group on a CONNECTED build
# machine and vendors the quantised model as a drop-in. Version-pinned for
# reproducible offline parity -- see docs/run_gliner-integration_2026-07-24.md
# ("Pinning" decision). NOTE: confirm on the connected build machine whether an
# onnxruntime-only install is possible or gliner still pulls torch; prefer the
# ONNX path to keep the bundle small (the runbook covers exporting an int8 model).
ml = [
  "onnxruntime>=1.17,<2.0",
  "gliner>=0.2.13,<0.3",
]

[project.scripts]
anonymizer = "anonymizer.gui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# Allow the spaCy model wheels declared as direct URL dependencies.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["anonymizer"]
